--- a/_includes/facts-section.html
+++ b/_includes/facts-section.html
@@ -1,6 +1,6 @@
   <!-- Facts Section -->
   <section class="container mx-auto py-16 px-8 sm:px-16 grid grid-cols-6">
-    {% for item in block.facts-loop %}
+    {% for item in block.facts-loop limit:3 %}
     <div class="col-span-2 pb-3 lg:col-span-1">
         <p class="uppercase font-bold text-xs">{{item.heading}}<br><span class="text-4xl">{{item.fact}}</span></p>
     </div>
