--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="container mx-auto p-8 px-8 sm:px-16 uppercase">
     <!-- order shifted on the newsletter to bring it above on mobile, but then needed to make the flex only on md, which meant we needed to add grid to the default/small size -->
-    <div class="border-teal pt-8 grid gap-12 justify-center md:flex md:justify-between">
+    <div class="border-featured pt-8 grid gap-12 justify-center md:flex md:justify-between">
       <div class="flex gap-16">
         <div class="">
           <p class="font-bold pb-6">Group name</p>
@@ -21,9 +21,9 @@
       <form class="flex flex-col order-first md:order-none">
         <p>Subscribe to our newsletter</p>
         <label class="sr-only" for="_replyto"> Email </label>
-        <input class="my-4 border-teal border-2 bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
+        <input class="my-4 border-featured border-2 bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
         <div>
-          <button type="submit" class="bg-teal text-seafoam uppercase text-xs px-6 p-2"> Subscribe </button>
+          <button type="submit" class="bg-featured text-base-color uppercase text-xs px-6 p-2"> Subscribe </button>
         </div>
       </form>
     </div>
