--- a/_includes/image-grid-section.html
+++ b/_includes/image-grid-section.html
@@ -10,6 +10,6 @@
         {% endfor %}
     </div>
     <div class="pt-8">
-        <button class="bg-teal text-seafoam uppercase text-xs px-6 p-2">{{block.button-text}}</button>
+        <button class="bg-fetured text-base-color uppercase text-xs px-6 p-2">{{block.button-text}}</button>
     </div>
 </section>
