--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
  <!-- Header -->
  <header class="container mx-auto pt-4 px-8 sm:px-16 flex flex-col">
     <!-- Nav Bar -->
-   <nav class="flex flex-col md:flex-row justify-between pb-2 border-teal border-b-2">
+   <nav class="flex flex-col md:flex-row justify-between pb-2 border-accent border-b-2">
      <div class="uppercase text-lg">Diving Company</div>
      <div class="content-center -mx-2">
        <a href="#" class="p-2 uppercase text-sm">Link 1</a>
