--- a/style.css
+++ b/style.css
@@ -9,3 +9,44 @@
 @tailwind utilities;
 
 /* Custom CSS */
+
+/* Button styles */
+
+/* Reuseable Group Styles */
+.button {
+    background-color: var(--featured-color);
+    color: var(--base-color);
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    padding: 0.5rem 1.5rem;
+    border: 1px solid var(--featured-color);
+    transition: all 150ms;
+    display: inline-block;
+}
+
+.button:hover {
+    background-color: var(--accent-color);
+    color: var(--base-color);
+    text-shadow: var(--base-color) 3px;
+    border: 1px solid transparent;
+}
+
+/* Footer & header links speecifically so they don't jump */
+
+footer a {
+    border-bottom: 2px solid transparent;
+}
+
+footer a:hover {
+    border-bottom: 2px solid;
+    display: inline-block;
+}
+
+header a {
+    border: 2px solid transparent;
+    transition: all 150ms;
+}
+
+header a:hover {
+    border-bottom: 2px solid;
+}
