--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,8 +22,8 @@
         <p>Subscribe to our newsletter</p>
         <label class="sr-only" for="_replyto"> Email </label>
         <input class="my-4 border-featured border-2 bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
-        <div>
-          <button type="submit" class="bg-featured text-base-color uppercase text-xs px-6 p-2"> Subscribe </button>
+        <div class="text-right">
+          <button type="submit" class="button content-end"> Subscribe </button>
         </div>
       </form>
     </div>
