--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
     <!-- Nav Bar -->
    <nav class="flex flex-col md:flex-row justify-between pb-2 border-accent border-b-2">
      <div class="uppercase text-lg">Diving Company</div>
-     <div class="content-center -mx-2">
-       <a href="#" class="p-2 uppercase text-sm">Link 1</a>
-       <a href="#" class="p-2 uppercase text-sm">Link 2</a>
-       <a href="#" class="p-2 uppercase text-sm">Link 3</a>
-       <a href="#" class="p-2 uppercase text-sm">Link 4</a>
+     <div class="content-center -mx-4 pb-2">
+       <a href="#" class="p-2 mx-2 uppercase text-sm">Link 1</a>
+       <a href="#" class="p-2 mx-2 uppercase text-sm">Link 2</a>
+       <a href="#" class="p-2 mx-2 uppercase text-sm">Link 3</a>
+       <a href="#" class="p-2 mx-2 uppercase text-sm">Link 4</a>
      </div>
    </nav>
  </header>
