Added tons of padding

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,9 +21,9 @@
       <form class="flex flex-col order-first md:order-none">
         <p>Subscribe to our newsletter</p>
         <label class="sr-only" for="_replyto"> Email </label>
-        <input class="my-4 border-featured border-2 bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
+        <input class="my-4 border-featured border-2 focus:border-accent focus:border-2 bg-inherit focus:outline-none pl-2" type="email" name="_replyto" id="_replyto" placeholder=""/>
         <div class="text-right">
-          <button type="submit" class="button content-end"> Subscribe </button>
+          <button type="submit" class="button"> Subscribe </button>
         </div>
       </form>
     </div>
