--- a/_includes/text-and-image-grid.html
+++ b/_includes/text-and-image-grid.html
@@ -4,7 +4,7 @@
       <!-- Secondary Heading -->
       <div class="col-span-1 pr-12">
         <div>
-          <h3 class="uppercase font-bold text-xl">{{block.heading}}</h3>
+          <h3 class="uppercase font-bold text-xl pb-6">{{block.heading}}</h3>
         </div>
         <p class="pb-3">{{block.text-1}}</p>
         <p class="pb-3">{{block.text-2}}</p>
