--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,6 +579,9 @@ video {
 .gap-6 {
   gap: 1.5rem;
 }
+.gap-8 {
+  gap: 2rem;
+}
 .border-2 {
   border-width: 2px;
 }
@@ -635,6 +638,14 @@ video {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
 .pb-16 {
   padding-bottom: 4rem;
 }
@@ -655,6 +666,15 @@ video {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pb-12 {
+  padding-bottom: 3rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .text-center {
   text-align: center;
@@ -752,10 +772,27 @@ header a:hover {
     border-bottom: 2px solid;
 }
 
+.focus\:border-2:focus {
+  border-width: 2px;
+}
+
+.focus\:border-accent:focus {
+  border-color: var(--accent-color);
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 @media (min-width: 640px) {
   .sm\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+  .sm\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 }
 
@@ -792,5 +829,8 @@ header a:hover {
   }
   .lg\:col-span-3 {
     grid-column: span 3 / span 3;
+  }
+  .lg\:pb-0 {
+    padding-bottom: 0px;
   }
 }
