--- a/_includes/image-grid-section.html
+++ b/_includes/image-grid-section.html
@@ -1,7 +1,7 @@
 <!-- Image Grid Section -->
-<section class="container mx-auto px-8 sm:px-16 text-center">
+<section class="container mx-auto px-8 sm:px-12 py-16 text-center">
     <div class="max-w-xl m-auto">
-        <h2 class="pb-6 uppercase font-bold text-5xl">{{block.heading}}</h2>
+        <h2 class="pb-12 uppercase font-bold text-5xl">{{block.heading}}</h2>
     </div>
     <!-- Images -->
     <div class="grid grid-cols-2 md:grid-cols-3 gap-1">
