--- a/_includes/info-section.html
+++ b/_includes/info-section.html
@@ -1,8 +1,8 @@
 <!-- Info Section -->
-<section class="container mx-auto px-8 py-32 sm:px-16 flex flex-col md:grid grid-cols-3 gap-8">
+<section class="container mx-auto px-8 py-32 sm:px-16 flex flex-col md:grid grid-cols-3 gap-12">
     {% for item in block.columns %}
     <div class="">
-        <h4 class="uppercase font-bold text-2xl">{{item.heading}}</h4>
+        <h4 class="uppercase font-bold text-2xl pb-3">{{item.heading}}</h4>
         <p>{{item.text}}</p>
     </div>
     {% endfor %}
