adding cloud cannon-y options to the relevant blocks

--- a/_includes/image-banner.html
+++ b/_includes/image-banner.html
@@ -1,5 +1,5 @@
 <!-- Image Banner -->
 <section class="relative h-72">
-    <img class="absolute inset-0 w-full h-full object-cover" src="{{block.image}}" alt="{{block.alt}}">
+    <img class="absolute inset-0 w-full h-full object-cover" style="object-position: {{block.image-horizontal-focal-point}} {{block.image-vertical-focal-point}}" src="{{block.image}}" src="{{block.image}}" alt="{{block.alt}}">
 </section>
 
