--- a/_includes/text-and-image-grid.html
+++ b/_includes/text-and-image-grid.html
@@ -1,20 +1,22 @@
 <!-- Text and Image Grid -->
 <section class="container mx-auto py-32 px-8 sm:px-16">
     <div class="grid md:grid-cols-2 gap-6">
+      <!-- md:h-full on the div negates the h-72, h-full on the image is still needed because of the position absolute -->
+      <div class="grow relative order-first h-72 md:order-none md:h-full"> 
+        <img class="absolute w-full h-full object-cover" style="object-position: {{block.image-horizontal-focal-point}} {{block.image-vertical-focal-point}}" src="{{block.image}}" alt="{{block.alt}}">
+      </div>
       <!-- Secondary Heading -->
-      <div class="col-span-1 pr-12">
+      <div class="col-span-1 pl-12 {% if block.image-placement == 'right' %} pl-0 pr-12 md:order-first {% endif %}">
         <div>
           <h3 class="uppercase font-bold text-xl pb-6">{{block.heading}}</h3>
         </div>
         <p class="pb-3">{{block.text-1}}</p>
         <p class="pb-3">{{block.text-2}}</p>
         <div class="pt-8">
-          <button class="button">{{block.button-text}}</button>
+          {% if block.button-link and block.button-text %}
+          <a href="{{block.button-link}}" class="button">{{block.button-text}}</a>
+          {% endif %}
         </div>
-      </div>
-      <!-- md:h-full on the div negates the h-72, h-full on the image is still needed because of the position absolute -->
-      <div class="grow relative order-first h-72 md:order-none md:h-full"> 
-        <img class="absolute w-full h-full object-cover" src="{{block.image}}" alt="{{block.alt}}">
       </div>
     </div>
   </section>
