adding more responsive updates

--- a/_includes/text-and-image-grid.html
+++ b/_includes/text-and-image-grid.html
@@ -2,13 +2,13 @@
 <section class="container mx-auto py-32 px-8 sm:px-16">
     <div class="grid md:grid-cols-2 gap-6">
       <!-- md:h-full on the div negates the h-72, h-full on the image is still needed because of the position absolute -->
-      <div class="grow relative order-first h-72 md:order-none md:h-full"> 
+      <div class="grow relative order-first aspect-square md:h-full md:aspect-auto md:order-none "> 
         <img class="absolute w-full h-full object-cover" style="object-position: {{block.image-horizontal-focal-point}} {{block.image-vertical-focal-point}}" src="{{block.image}}" alt="{{block.alt}}">
       </div>
       <!-- Secondary Heading -->
       <div class="col-span-1 pl-12 {% if block.image-placement == 'right' %} pl-0 pr-12 md:order-first {% endif %}">
         <div>
-          <h3 class="uppercase font-bold text-xl pb-6">{{block.heading}}</h3>
+          <h3 class="uppercase font-bold text-xl pb-6 pt-10 md:pt-0">{{block.heading}}</h3>
         </div>
         <p class="pb-3">{{block.text-1}}</p>
         <p class="pb-3">{{block.text-2}}</p>
