--- a/_includes/facts-section.html
+++ b/_includes/facts-section.html
@@ -4,7 +4,7 @@
         {% for item in block.facts-loop | limit:3 %}
         {% if item.heading and item.fact %}
         <div class="flex m-auto pb-8 lg:pb-0">
-            <p class="uppercase font-bold text-xs">{{item.heading}}<br><span class="text-4xl">{{item.fact}}</span></p>
+            <p class="uppercase font-bold text-xs">{{item.heading}}<br><span class="text-2xl sm:text-4xl">{{item.fact}}</span></p>
         </div>
         {% endif %}
         {% endfor %}
