--- a/_includes/image-grid-section.html
+++ b/_includes/image-grid-section.html
@@ -1,5 +1,5 @@
 <!-- Image Grid Section -->
-<section class="container mx-auto px-8 sm:px-12 py-16 text-center">
+<section class="container mx-auto px-8 sm:px-12 py-10 sm:py-16 text-center">
     <div class="max-w-xl m-auto">
         <h2 class="pb-12 uppercase font-bold text-5xl">{{block.heading}}</h2>
     </div>
